<resources>
    <string name="app_name">NoteAppRoomDatabase</string>
    <string name="floating_button">floatingButton</string>
    <string name="title">Title</string>
    <string name="timestamp">timestamp</string>
    <string name="delete">delete</string>
    <string name="enter_note_title">Enter note title</string>
    <string name="enter_note_description">Enter note description</string>
    <string name="notification_title">Title</string>
    <string name="notification_description">Description</string>
    <string name="app_logo">app_logo</string>
    <string name="lastUpdate">\Last updated: \</string>
    <string name="info">info</string>
    <string name="saveUpdateNote">saveUpdateNote</string>
    <string name="after_adding_the_notes_you_can_also_rearrange_them_by_drag_and_drop_option">After adding the Notes, you can also rearrange them by drag and drop option.</string>
</resources>