<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/notes" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/app_logo"
        android:text="@string/notification_title"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/app_logo"
        android:text="@string/notification_description"
        android:textSize="12sp"
        android:textStyle="bold" />

</RelativeLayout>