<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="5dp"
    android:background="@color/teal_200"
    android:elevation="5dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/title"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/timestamp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/deleteOption"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_delete_24" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>